add src and first look at data

--- a/train.ipynb
+++ b/train.ipynb
@@ -43,9 +43,417 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb287df0-2645-4156-bf55-5b8f149f9d8e",
+   "metadata": {},
+   "source": [
+    "Import necessary libs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "65a42ec4-2a67-448f-9630-4c06ee61fcab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Second layer models\n",
+    "from lightgbm import LGBMClassifier\n",
+    "from catboost import CatBoost\n",
+    "\n",
+    "# Functions for prefilter, evaluate and baseline\n",
+    "from src.utils import prefilter_items\n",
+    "from src.metrics import precision_at_k, recall_at_k\n",
+    "from src.recommenders import MainRecommender\n",
+    "\n",
+    "# Ignore some warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fdc11827-3e77-46db-bd90-238553401fa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('data/retail_train.csv')\n",
+    "test = pd.read_csv('data/retail_test.csv')\n",
+    "item_features = pd.read_csv('data/product.csv')\n",
+    "user_features = pd.read_csv('data/hh_demographic.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5a3c2c1-221e-42aa-b39a-e8d4b3b06357",
+   "metadata": {},
+   "source": [
+    "Let's look at data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5fe31841-16ce-4ee5-8277-039e8cf8dd92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>basket_id</th>\n",
+       "      <th>day</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>sales_value</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>retail_disc</th>\n",
+       "      <th>trans_time</th>\n",
+       "      <th>week_no</th>\n",
+       "      <th>coupon_disc</th>\n",
+       "      <th>coupon_match_disc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2375</td>\n",
+       "      <td>26984851472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1004906</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>364</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>1631</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2375</td>\n",
+       "      <td>26984851472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1033142</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>364</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1631</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id    basket_id  day  item_id  quantity  sales_value  store_id  \\\n",
+       "0     2375  26984851472    1  1004906         1         1.39       364   \n",
+       "1     2375  26984851472    1  1033142         1         0.82       364   \n",
+       "\n",
+       "   retail_disc  trans_time  week_no  coupon_disc  coupon_match_disc  \n",
+       "0         -0.6        1631        1          0.0                0.0  \n",
+       "1          0.0        1631        1          0.0                0.0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5d476b80-a183-4917-a066-dfcb5fd50459",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>basket_id</th>\n",
+       "      <th>day</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>sales_value</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>retail_disc</th>\n",
+       "      <th>trans_time</th>\n",
+       "      <th>week_no</th>\n",
+       "      <th>coupon_disc</th>\n",
+       "      <th>coupon_match_disc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1340</td>\n",
+       "      <td>41652823310</td>\n",
+       "      <td>664</td>\n",
+       "      <td>912987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.49</td>\n",
+       "      <td>446</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>588</td>\n",
+       "      <td>41652838477</td>\n",
+       "      <td>664</td>\n",
+       "      <td>1024426</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.29</td>\n",
+       "      <td>388</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id    basket_id  day  item_id  quantity  sales_value  store_id  \\\n",
+       "0     1340  41652823310  664   912987         1         8.49       446   \n",
+       "1      588  41652838477  664  1024426         1         6.29       388   \n",
+       "\n",
+       "   retail_disc  trans_time  week_no  coupon_disc  coupon_match_disc  \n",
+       "0          0.0          52       96          0.0                0.0  \n",
+       "1          0.0           8       96          0.0                0.0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4e1a81ee-d6d3-46d8-9786-98ac01c8a777",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRODUCT_ID</th>\n",
+       "      <th>MANUFACTURER</th>\n",
+       "      <th>DEPARTMENT</th>\n",
+       "      <th>BRAND</th>\n",
+       "      <th>COMMODITY_DESC</th>\n",
+       "      <th>SUB_COMMODITY_DESC</th>\n",
+       "      <th>CURR_SIZE_OF_PRODUCT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25671</td>\n",
+       "      <td>2</td>\n",
+       "      <td>GROCERY</td>\n",
+       "      <td>National</td>\n",
+       "      <td>FRZN ICE</td>\n",
+       "      <td>ICE - CRUSHED/CUBED</td>\n",
+       "      <td>22 LB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>26081</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MISC. TRANS.</td>\n",
+       "      <td>National</td>\n",
+       "      <td>NO COMMODITY DESCRIPTION</td>\n",
+       "      <td>NO SUBCOMMODITY DESCRIPTION</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PRODUCT_ID  MANUFACTURER    DEPARTMENT     BRAND            COMMODITY_DESC  \\\n",
+       "0       25671             2       GROCERY  National                  FRZN ICE   \n",
+       "1       26081             2  MISC. TRANS.  National  NO COMMODITY DESCRIPTION   \n",
+       "\n",
+       "            SUB_COMMODITY_DESC CURR_SIZE_OF_PRODUCT  \n",
+       "0          ICE - CRUSHED/CUBED                22 LB  \n",
+       "1  NO SUBCOMMODITY DESCRIPTION                       "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_features.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5d81b446-eaf7-495f-9633-ac875d1842c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AGE_DESC</th>\n",
+       "      <th>MARITAL_STATUS_CODE</th>\n",
+       "      <th>INCOME_DESC</th>\n",
+       "      <th>HOMEOWNER_DESC</th>\n",
+       "      <th>HH_COMP_DESC</th>\n",
+       "      <th>HOUSEHOLD_SIZE_DESC</th>\n",
+       "      <th>KID_CATEGORY_DESC</th>\n",
+       "      <th>household_key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>65+</td>\n",
+       "      <td>A</td>\n",
+       "      <td>35-49K</td>\n",
+       "      <td>Homeowner</td>\n",
+       "      <td>2 Adults No Kids</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None/Unknown</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45-54</td>\n",
+       "      <td>A</td>\n",
+       "      <td>50-74K</td>\n",
+       "      <td>Homeowner</td>\n",
+       "      <td>2 Adults No Kids</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None/Unknown</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  AGE_DESC MARITAL_STATUS_CODE INCOME_DESC HOMEOWNER_DESC      HH_COMP_DESC  \\\n",
+       "0      65+                   A      35-49K      Homeowner  2 Adults No Kids   \n",
+       "1    45-54                   A      50-74K      Homeowner  2 Adults No Kids   \n",
+       "\n",
+       "  HOUSEHOLD_SIZE_DESC KID_CATEGORY_DESC  household_key  \n",
+       "0                   2      None/Unknown              1  \n",
+       "1                   2      None/Unknown              7  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_features.head(2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b54cd82-afd8-4361-994a-f44c7b8bb7f7",
+   "id": "956fd893-c60c-48da-aab5-9f13e96c56d9",
    "metadata": {},
    "outputs": [],
    "source": []
