--- a/train.ipynb
+++ b/train.ipynb
@@ -94,7 +94,7 @@
    "id": "d5a3c2c1-221e-42aa-b39a-e8d4b3b06357",
    "metadata": {},
    "source": [
-    "Let's look at data:"
+    "Let's look at data"
    ]
   },
   {
@@ -452,10 +452,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "956fd893-c60c-48da-aab5-9f13e96c56d9",
+   "execution_count": 27,
+   "id": "27441053-92db-46c8-ae92-b6946684099a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2396804 entries, 0 to 2396803\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Dtype  \n",
+      "---  ------             -----  \n",
+      " 0   user_id            int64  \n",
+      " 1   basket_id          int64  \n",
+      " 2   day                int64  \n",
+      " 3   item_id            int64  \n",
+      " 4   quantity           int64  \n",
+      " 5   sales_value        float64\n",
+      " 6   store_id           int64  \n",
+      " 7   retail_disc        float64\n",
+      " 8   trans_time         int64  \n",
+      " 9   week_no            int64  \n",
+      " 10  coupon_disc        float64\n",
+      " 11  coupon_match_disc  float64\n",
+      "dtypes: float64(4), int64(8)\n",
+      "memory usage: 219.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "746f0640-46f3-4611-8cfa-e48e26617c67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 88734 entries, 0 to 88733\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   user_id            88734 non-null  int64  \n",
+      " 1   basket_id          88734 non-null  int64  \n",
+      " 2   day                88734 non-null  int64  \n",
+      " 3   item_id            88734 non-null  int64  \n",
+      " 4   quantity           88734 non-null  int64  \n",
+      " 5   sales_value        88734 non-null  float64\n",
+      " 6   store_id           88734 non-null  int64  \n",
+      " 7   retail_disc        88734 non-null  float64\n",
+      " 8   trans_time         88734 non-null  int64  \n",
+      " 9   week_no            88734 non-null  int64  \n",
+      " 10  coupon_disc        88734 non-null  float64\n",
+      " 11  coupon_match_disc  88734 non-null  float64\n",
+      "dtypes: float64(4), int64(8)\n",
+      "memory usage: 8.1 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fc9f8853-81bb-4276-9d0d-61ebf32bf099",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 92353 entries, 0 to 92352\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   item_id               92353 non-null  int64 \n",
+      " 1   manufacturer          92353 non-null  int64 \n",
+      " 2   department            92353 non-null  object\n",
+      " 3   brand                 92353 non-null  object\n",
+      " 4   commodity_desc        92353 non-null  object\n",
+      " 5   sub_commodity_desc    92353 non-null  object\n",
+      " 6   curr_size_of_product  92353 non-null  object\n",
+      "dtypes: int64(2), object(5)\n",
+      "memory usage: 4.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "item_features.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b8c79870-84f2-4470-925d-e0686fe678d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 801 entries, 0 to 800\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   age_desc             801 non-null    object\n",
+      " 1   marital_status_code  801 non-null    object\n",
+      " 2   income_desc          801 non-null    object\n",
+      " 3   homeowner_desc       801 non-null    object\n",
+      " 4   hh_comp_desc         801 non-null    object\n",
+      " 5   household_size_desc  801 non-null    object\n",
+      " 6   kid_category_desc    801 non-null    object\n",
+      " 7   user_id              801 non-null    int64 \n",
+      "dtypes: int64(1), object(7)\n",
+      "memory usage: 50.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_features.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8c8114aa-8ee5-493a-ac16-e9439c8df5c1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def print_stats_data(df_data, name_df):\n",
+    "    print(f'{name_df}:')\n",
+    "    print(f\"Shape: {df_data.shape} Users: {df_data['user_id'].nunique()} Items: {df_data['item_id'].nunique()}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "904cadca-4fc8-4635-879a-73bf240222fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data:\n",
+      "Shape: (2396804, 12) Users: 2499 Items: 89051\n",
+      "\n",
+      "test:\n",
+      "Shape: (88734, 12) Users: 1885 Items: 20497\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_stats_data(data, 'data')\n",
+    "print_stats_data(test, 'test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "871aacb5-63cc-472d-91f3-f8827b70b990",
+   "metadata": {},
+   "source": [
+    "Prepare columns feature datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0193a79a-a569-4ca6-8092-d5e29324bcff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# column processing\n",
+    "item_features.columns = [col.lower() for col in item_features.columns]\n",
+    "user_features.columns = [col.lower() for col in user_features.columns]\n",
+    "\n",
+    "item_features.rename(columns={'product_id': 'item_id'}, inplace=True)\n",
+    "user_features.rename(columns={'household_key': 'user_id' }, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "027b555e-7c2e-4819-8d97-acb67fc7ac2e",
+   "metadata": {},
+   "source": [
+    "### Split dataset for train, eval and test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "02a5cae4-4dc8-4ad8-8070-719430abeb81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# timeline for train:  -- old purchases -- | -- 6 weeks -- \n",
+    "\n",
+    "VAL_MATCHER_WEEKS = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "028f2fc1-6f71-48de-9204-54542658202b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data for train 1-st layer model (matching)     -- old purchases --\n",
+    "data_train_matcher = data[data['week_no'] < data['week_no'].max() - VAL_MATCHER_WEEKS]\n",
+    "\n",
+    "# data for validate 1-st layer model (matching)  -- 6 weeks --\n",
+    "data_val_matcher = data[data['week_no'] >= data['week_no'].max() - VAL_MATCHER_WEEKS]\n",
+    "\n",
+    "# data for train 2-nd layer model (ranking)      -- 6 weeks --\n",
+    "data_train_ranker = data_val_matcher.copy()\n",
+    "\n",
+    "# data for validate 2-nd layer model (ranking)   -- test data --\n",
+    "data_val_ranker = test.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "33b8ee44-82d0-46c6-98dc-5ca80dfcbf93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_matcher:\n",
+      "Shape: (2193515, 12) Users: 2499 Items: 85334\n",
+      "\n",
+      "val_matcher:\n",
+      "Shape: (203289, 12) Users: 2197 Items: 30040\n",
+      "\n",
+      "train_ranker:\n",
+      "Shape: (203289, 12) Users: 2197 Items: 30040\n",
+      "\n",
+      "val_ranker:\n",
+      "Shape: (88734, 12) Users: 1885 Items: 20497\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_stats_data(data_train_matcher,'train_matcher')\n",
+    "print_stats_data(data_val_matcher,'val_matcher')\n",
+    "print_stats_data(data_train_ranker,'train_ranker')\n",
+    "print_stats_data(data_val_ranker,'val_ranker')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12a849e0-63f9-4a10-91a1-6944b5202d80",
+   "metadata": {},
+   "source": [
+    "Here is dispertion of users and items. In this case we won't use \"Cold Start\" and fix it below. But for \"Cold Start\" may use top popular items as base case from baseline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e67e507-eda4-45a4-ba11-97628109f540",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Prefinter data_train_matcher"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d01508b0-35b4-48c6-84b2-0459b27a5932",
+   "metadata": {},
+   "source": [
+    "For begin we will take 5000 popular items. But later we try select better decision."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "467a5421-d54b-4bdd-9c35-fb89e47996d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decreased # items from 85334 to 5001\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_items_before = data_train_matcher['item_id'].nunique()\n",
+    "\n",
+    "data_train_matcher = prefilter_items(data_train_matcher, item_features=item_features, take_n_popular=5000)\n",
+    "\n",
+    "n_items_after = data_train_matcher['item_id'].nunique()\n",
+    "print('Decreased # items from {} to {}'.format(n_items_before, n_items_after))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63f853f4-9949-4de9-8ec8-902277632f8e",
+   "metadata": {},
    "source": []
   }
  ],
