Ranking model, prepare data

--- a/train.ipynb
+++ b/train.ipynb
@@ -26,12 +26,11 @@
     "**Stages**:\n",
     "\n",
     "1. Prepare data:  prefiltering\n",
-    "2. Initialize MainRecommender (learn 1-st layer model based on MainRecommender class as baseline)\n",
-    "3. Choose Top popular\n",
-    "4. Evaluate Top@k Recall\n",
+    "2. Marching model (initialize MainRecommender 1-st layer model as baseline)\n",
+    "3. Evaluate Top@k Recall\n",
+    "4. Ranking model (choose 2-nd layer model)\n",
     "5. Add feature engineering for ranking\n",
-    "6. Learn 2-nd layer model\n",
-    "7. Validate on test.csv"
+    "6. Validate on test.csv"
    ]
   },
   {
@@ -1458,18 +1457,540 @@
    "id": "ad278102-3c2a-48bd-9b73-4c43738e06f2",
    "metadata": {},
    "source": [
-    " Minor grow recall after k=200, therefore we choose k = 200. "
+    "**Conclusion:** Of course the more sample value the more recall. But growth rate for k > 200 is low, therefore we choose number k predicts equal 200. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "id": "dfe53875-a818-4792-8469-605734d42035",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOPK_RECALL = 50"
+    "N_PREDICT = 200"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9f6224b-748b-4b47-877b-15b12684620d",
+   "metadata": {},
+   "source": [
+    "# 4. Ranking model "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc99f276-6349-4fe4-b697-bed2aa26ac69",
+   "metadata": {},
+   "source": [
+    "### Prepare data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "732b6743-44bc-43c8-a0fc-cbb6cde4c3b7",
+   "metadata": {},
+   "source": [
+    "We need make new dataset with 'target' column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "aef3665a-c535-4eca-ba0b-883e40d5ad2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get only unique users from train_ranker -- 6 weeks --\n",
+    "df_match_candidates = pd.DataFrame(data_train_ranker['user_id'].unique())\n",
+    "df_match_candidates.columns = ['user_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "bc2725c4-3be0-4898-a9c2-3919d5035668",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.85 s, sys: 40.7 ms, total: 5.89 s\n",
+      "Wall time: 6.04 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# get candidates from first stage (matcher)\n",
+    "df_match_candidates['candidates'] = df_match_candidates['user_id'].\\\n",
+    "                                        apply(lambda x: recommender.get_own_recommendations(x, N=N_PREDICT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "4fbc7c2b-1f77-48d5-974d-fd72c28cdf43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>candidates</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84</td>\n",
+       "      <td>[903529, 920025, 977374, 829722, 987518, 87304...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1753</td>\n",
+       "      <td>[967041, 963686, 948640, 1057168, 9553382, 942...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id                                         candidates\n",
+       "0       84  [903529, 920025, 977374, 829722, 987518, 87304...\n",
+       "1     1753  [967041, 963686, 948640, 1057168, 9553382, 942..."
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_match_candidates.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "3447318e-89c4-45a9-bf16-be7f198fd022",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get transform candidates for each user\n",
+    "df_items = df_match_candidates.\\\n",
+    "                apply(lambda x: pd.Series(x['candidates']), axis=1).stack().reset_index(level=1, drop=True)\n",
+    "df_items.name = 'item_id'\n",
+    "\n",
+    "# and join it\n",
+    "df_match_candidates = df_match_candidates.drop('candidates', axis=1).join(df_items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "1631b45f-b7a0-40de-b28c-2f1a26d9ed08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84</td>\n",
+       "      <td>903529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84</td>\n",
+       "      <td>920025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84</td>\n",
+       "      <td>977374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84</td>\n",
+       "      <td>829722</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  item_id\n",
+       "0       84   903529\n",
+       "0       84   920025\n",
+       "0       84   977374\n",
+       "0       84   829722"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_match_candidates.head(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dba71f5-d9c1-49e5-8c26-e80af46551a2",
+   "metadata": {},
+   "source": [
+    "Check warm start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "2ed00f9d-deeb-4db0-aee3-d6d2e73b10fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "match_candidates:\n",
+      "Shape: (438800, 2) Users: 2194 Items: 4624\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_stats_data(df_match_candidates, 'match_candidates')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48b8345d-68e1-4853-aa9e-5282467232d4",
+   "metadata": {},
+   "source": [
+    "### Make target column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "725515c9-563a-4297-be21-405cf22550ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make new dataset for convenience\n",
+    "df_ranker_train = data_train_ranker[['user_id', 'item_id']].copy()\n",
+    "# only purchases\n",
+    "df_ranker_train['target'] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c9ebec-43c9-4cc3-bcea-f227874bb2a5",
+   "metadata": {},
+   "source": [
+    "Add zeros to dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "d9b79106-6aab-4602-b7ce-852300bf7a4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ranker_train = df_match_candidates.merge(df_ranker_train, on=['user_id', 'item_id'], how='left')\n",
+    "\n",
+    "# clean dublicates\n",
+    "df_ranker_train = df_ranker_train.drop_duplicates(subset=['user_id', 'item_id'])\n",
+    "\n",
+    "df_ranker_train['target'].fillna(0, inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "2c9e9d1e-82e0-49d6-ac09-6a52bbb7451e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84</td>\n",
+       "      <td>903529</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>84</td>\n",
+       "      <td>920025</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  item_id  target\n",
+       "0       84   903529     1.0\n",
+       "2       84   920025     1.0"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ranker_train.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "a691ca5e-06e3-46ee-8bee-6b6d90b7f865",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    402259\n",
+       "1.0     21206\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ranker_train.target.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "c0f065cc-c5d5-4c64-8c94-4c2dd3005aec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05007733815073265"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ranker_train['target'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a023bf4-f32c-48a3-a45c-2b9acf6688a5",
+   "metadata": {},
+   "source": [
+    "### Prepare features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "eae8bdcd-cdad-4762-8477-ed47a690b056",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>target</th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>department</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>commodity_desc</th>\n",
+       "      <th>sub_commodity_desc</th>\n",
+       "      <th>curr_size_of_product</th>\n",
+       "      <th>age_desc</th>\n",
+       "      <th>marital_status_code</th>\n",
+       "      <th>income_desc</th>\n",
+       "      <th>homeowner_desc</th>\n",
+       "      <th>hh_comp_desc</th>\n",
+       "      <th>household_size_desc</th>\n",
+       "      <th>kid_category_desc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84</td>\n",
+       "      <td>903529</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>539</td>\n",
+       "      <td>DRUG GM</td>\n",
+       "      <td>National</td>\n",
+       "      <td>CIGARETTES</td>\n",
+       "      <td>CIGARETTES</td>\n",
+       "      <td>972976  PK</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>84</td>\n",
+       "      <td>920025</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>764</td>\n",
+       "      <td>GROCERY</td>\n",
+       "      <td>National</td>\n",
+       "      <td>LAUNDRY ADDITIVES</td>\n",
+       "      <td>FABRIC SOFTENER LIQUID</td>\n",
+       "      <td>60 LOAD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  item_id  target  manufacturer department     brand  \\\n",
+       "0       84   903529     1.0           539    DRUG GM  National   \n",
+       "1       84   920025     1.0           764    GROCERY  National   \n",
+       "\n",
+       "      commodity_desc      sub_commodity_desc curr_size_of_product age_desc  \\\n",
+       "0         CIGARETTES              CIGARETTES           972976  PK      NaN   \n",
+       "1  LAUNDRY ADDITIVES  FABRIC SOFTENER LIQUID              60 LOAD      NaN   \n",
+       "\n",
+       "  marital_status_code income_desc homeowner_desc hh_comp_desc  \\\n",
+       "0                 NaN         NaN            NaN          NaN   \n",
+       "1                 NaN         NaN            NaN          NaN   \n",
+       "\n",
+       "  household_size_desc kid_category_desc  \n",
+       "0                 NaN               NaN  \n",
+       "1                 NaN               NaN  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ranker_train = df_ranker_train.merge(item_features, on='item_id', how='left')\n",
+    "df_ranker_train = df_ranker_train.merge(user_features, on='user_id', how='left')\n",
+    "\n",
+    "df_ranker_train.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f87988a9-6e15-4d4e-9ea6-f365cf0b51be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
